# QTeamSpeak3

./: .gitignore  CMakeLists.txt  README.md  qteamspeak3.pro
cmake/: PrecompiledHeader.cmake
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt  main.cpp
examples/sdk/: CMakeLists.txt
sdk/: CMakeLists.txt  channel.cpp  channel.h  client.cpp  client.h  connection.cpp  connection.h  connectioninfo.cpp  connectioninfo.h  exception.h  fileinfo.cpp  fileinfo.h  filetransfer.cpp  filetransfer.h  library.cpp  library.h  preprocessor.cpp  preprocessor.h  qteamspeak.pro  sounddevice.cpp  sounddevice.h  stdafx.h  teamspeakevents.h  teamspeaksdk.h  tsnamespace.h  wavehandle.cpp  wavehandle.h
sdk/private/: cachemanager.cpp  cachemanager_p.h  channeltracker.cpp  channeltracker_p.h  definitions_p.h  eventmanager.cpp  eventmanager_p.h  interfacemanager.cpp  interfacemanager_p.h  interfacemanager_p_p.h  teamspeakdebug_p.h  teamspeakutils_p.h  threadsafecontainer_p.h
src/: CMakeLists.txt
src/QTeamSpeak/: channel.cpp  channel.h  client.cpp  client.h  connection.cpp  connection.h  connectioninfo.cpp  connectioninfo.h  event.h  eventlistener.h  exception.h  fileinfo.cpp  fileinfo.h  filetransfer.cpp  filetransfer.h  library.cpp  library.h  namespace.h  object.cpp  object.h  preprocessor.cpp  preprocessor.h  qteamspeakglobal.h  sounddevice.cpp  sounddevice.h  teamspeaksdk.h  wavehandle.cpp  wavehandle.h
src/QTeamSpeak/private/: debug_p.h  definition_p.h  eventmanager.cpp  eventmanager_p.h  interfacemanager.cpp  interfacemanager_p.h  interfacemanager_p_p.h  library_p.h  threadsafecontainer_p.h  utils_p.h
